# avito-task-rag

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
configs/: config.yaml
configs/model/: default.yaml
configs/path/: default.yaml
src/: __init__.py  analysis.py  config.py  dataset.py  indexer.py  inspect_article.py  launch_dashboard.py  predict.py  searcher.py  utils.py
