[project]
name = "rag-retrieval-baseline"
version = "0.1.0"
description = "Information Retrieval baseline (hybrid BM25 + dense FAISS search) for a RAG pipeline."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.44.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "hydra-core>=1.3.2",
    "beautifulsoup4>=4.12.0",
    "rank-bm25>=0.2.2",
    "pandas>=2.2.0",
    "fastparquet>=2024.5.0",
    "pyarrow>=16.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
# GPU FAISS wheels are Linux-only; install with: uv sync --extra gpu
gpu = [
    "faiss-gpu-cu12>=1.8.0; sys_platform == 'linux'",
]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
]

[tool.uv]
# CUDA 12.4 wheels for torch come from the PyTorch index, everything else from PyPI.
conflicts = []

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
