[project]
name = "rag-retrieval-baseline"
version = "0.1.0"
description = "Information Retrieval baseline (hybrid BM25 + dense FAISS search) for a RAG pipeline."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.44.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "hydra-core>=1.3.2",
    "beautifulsoup4>=4.12.0",
    "rank-bm25>=0.2.2",
    "pandas>=2.2.0",
    "fastparquet>=2024.5.0",
    "pyarrow>=16.0.0",
    "tqdm>=4.66.0",
    "pydantic>=2.13.4",
    "html2text>=2025.4.15",
    "arize-phoenix>=18.1.0",
    "pymorphy3>=2.0.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
      "F",   # Formats
      "E",   # Errors
      "W",   # Whitespace
      "I",   # Imports
      "ARG", # Unused arguments
      "SIM", # Code simplifications
      "Q",   # Quotes
      "PIE", # Unnecessary operation
      "A",   # Built-ins shadowing
      "B",   # Bugs
      "PLE", # Errors
      "UP",  # Warn if certain things can changed due to newer Python versions
      "C4",  # Catch incorrect use of comprehensions
      "ICN", # Use common import conventions
      "RET", # Return practices
      "PTH", # Pathlib instead of os.path
      "NPY", # NumPy things
]
ignore = [
      "E741",
      "N803",
      "RET504",
      "ISC001",
      "F722",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
